Project roots no longer overflow over the file listing when more than 2 root folders are present and 'fixed project root' configuration is toggled Closes issue #7

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -23,6 +23,7 @@ copyright   Copyright (C) 2016-2017 Tuomas Hatakka                              
     border-width: 0 }
 
   .directory.selected::before {
+    width: inhert;
     background: transparent !important }
 
   .project-root {
